--- a/index.css
+++ b/index.css
@@ -11,7 +11,11 @@ body{
     font-family: 'Times New Roman', Times, serif;
     /* overflow-y: hidden; */
     box-sizing: border-box;
+    font-size: 18px;
+    
+    overflow-y: scroll;
 }
+
 
 .heading1{
     text-align: center;
@@ -39,13 +43,14 @@ body{
     border-radius: 16px;
     box-shadow: 25px 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(8px);
-    border: 1px solid rgba(255, 255, 255, 0.3)
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .paddingDiv{
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 18%;
+    padding-right: 18%;
     padding-bottom: 5%;
+    margin: auto;
 }
 
 .upload{
@@ -94,6 +99,10 @@ body{
     typing 5s steps(30, end)
 }
 
+input::placeholder{
+    font-size: 18px;
+}
+
 
 @keyframes typing {
     from { width: 0 }
@@ -122,9 +131,10 @@ body{
     margin-right: 40px;
 }
 
-.genderClass{
-    padding-top: 20px;
+.nameInput{
+    margin-bottom: 20px;
 }
+
 
 .commonGenderClass{
     margin-top:5px;
@@ -172,7 +182,9 @@ body{
     border-radius: 16px;
     box-shadow: 10px 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(8px);
-    border: 1px solid rgba(236, 49, 158, 0.3)
+    border: 1px solid rgba(236, 49, 158, 0.3);
+    width:80%;
+    height:75px;
 }
 
 
@@ -182,6 +194,25 @@ body{
     background-color: transparent;
     outline: none;
   }
+
+  .error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+
+  @media screen and (max-width:1113px){
+    .commonDiv{
+        margin:15px auto ;
+    }
+    .nameClass{
+        margin:15px auto;
+        /* padding-left: 18%; */
+    }
+}
+
+
 
   @media screen and (max-width:1012px){
     .uploadPhotoDocs{
@@ -199,9 +230,13 @@ body{
         padding-left: 10%;
         padding-right: 10%;
     }
+
+    .mainForm{
+        width:80%;
+    }
 }
 
-@media screen and (max-width:670px){
+@media screen and (max-width:674px){
     .uploadPhotoDocs{
         flex-direction: column;
         align-items: center;
@@ -212,6 +247,10 @@ body{
     .uploadPhotoDocs button{
         margin-top: 10px;
         margin-right: 27px;
+    }
+
+    .nameClass{
+        padding-left:5%;
     }
 }
 
