--- a/index.css
+++ b/index.css
@@ -1,26 +1,21 @@
+/* ------------Body------------------- */
+
 body{
-    font-display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-image: url('bg-home.webp');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    font-size: 15px;
     font-family: 'Times New Roman', Times, serif;
-    /* overflow-y: hidden; */
     box-sizing: border-box;
     font-size: 18px;
-    
     overflow-y: scroll;
 }
 
 
-.heading1{
-    text-align: center;
-}
-
+/* ---------------Navbar---------------- */
 .Navyy{
     display: flex;
     justify-content:space-between;
@@ -29,15 +24,89 @@ body{
 
 .Navyy img{
     width: 150px;
-    margin: 20px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
 }
 
-.bday{
-    margin-top: 20px;
+/* ---------------Navbar---------------- */
+
+
+
+
+
+
+
+/* --------------------heading--------------- */
+.heading1{
+    text-align: center;
 }
 
+.mainTitle{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 642px) {
+    .mainTitle{
+        font-size: 13px;
+    }
+  }
+
+  @media screen and (max-width: 514px) {
+    .mainTitle{
+        font-size: 9px;
+    }
+  }
+
+
+
+.typewriter{
+   width:auto;
+}
+
+.typewriter h1{
+  color:rgb(133, 110, 110);
+  overflow: hidden;
+  border-right: .15em solid rgb(2, 14, 10);
+  white-space:nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: 
+    typing 5s steps(30, end)
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+
+
+
+/* --------------------heading--------------- */
+
+
+
+
+/* ---------------------container------------------ */
+.container{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    padding: 20px;
+}
+
+@media screen and (max-width:768px){
+    .container{
+        grid-template-columns: 1fr;
+    }
+}
+
+/* ----------------------mainform--------------------- */
 .mainForm{
-    width: 60%;
+    width: 90%;
     margin:auto;
     background: rgba(255, 217, 217, 0.2);
     border-radius: 16px;
@@ -46,12 +115,19 @@ body{
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.paddingDiv{
-    padding-left: 18%;
-    padding-right: 18%;
-    padding-bottom: 5%;
-    margin: auto;
+/* ---------------------commonDiv----------------- */
+.commonDiv{
+    margin-top: 20px;
 }
+
+.commonDiv input{
+    border:1px solid #490340;
+    border-bottom-width: 1px;
+    background-color:rgb(243, 178, 189);
+    backdrop-filter: blur(8px);
+}
+
+/* ----------------upload---------------- */
 
 .upload{
     flex-wrap: wrap;
@@ -75,44 +151,22 @@ body{
     margin-right: 20px;
 }
 
-.mainTitle{
-    margin-top: 50px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+/* ----------------upload---------------- */
 
-.typewriter{
-    width:auto;
-}
+/* ---------------------commonDiv----------------- */
 
-.typewriter h1{
-  /* word-break: break-all; */
-  color:rgb(133, 110, 110);
-  overflow: hidden;
-  border-right: .15em solid rgb(2, 14, 10);
-  white-space:nowrap;
-  margin: 0 auto;
-  letter-spacing: .15em;
-  animation: 
-    typing 5s steps(30, end)
-}
 
-input::placeholder{
-    font-size: 18px;
+
+/* ----------------------padding------------------ */
+.paddingDiv{
+    padding-left: 10%;
+    padding-right: 18%;
+    padding-bottom: 5%;
+    margin: auto;
 }
 
 
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-}
-
-.commonDiv{
-    margin-top: 20px;
-    padding-left: 20px;
-}
+/* ---------------------nameClass-------------------------- */
 
 .nameClass{
     margin-top: 30px;
@@ -120,50 +174,54 @@ input::placeholder{
     flex-wrap: wrap;
     align-items: center;
     overflow: hidden;
-    
+    width:100%;
 }
 
-.nameInput:nth-child(1){
-    margin-right: 40px;
+.nameClass input{
+    /* height: 20px; */
+    width: 80%;
+    padding-left: 10%;
+    border-radius: 50px;
 }
 
-.nameInput:nth-child(2){
-    margin-right: 40px;
+
+input::placeholder{
+    font-size: 18px;
 }
 
 .nameInput{
     margin-bottom: 20px;
 }
 
-
-.commonGenderClass{
-    margin-top:5px;
-}
-
-#textArea{
-    margin-top: 5px;
-    background: rgba(255, 217, 217, 0.2);
-    border-radius: 16px;
-    box-shadow: 10px 14px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8px);
-    border: 1px solid rgba(236, 49, 158, 0.3)
-}
-
-#textArea:focus{
-    margin-top: 5px;
-    background: rgba(202, 78, 78, 0.2);
-    border-radius: 16px;
-    box-shadow: 10px 14px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8px);
-    border: 1px solid rgba(236, 49, 158, 0.3);
-    outline:none;
-}
-
-.commonDiv input{
+.nameClass input:focus {
     border:0px solid #000000;
     border-bottom-width: 1px;
     background-color: transparent;
+    outline: none;
+  }
+
+
+/* ---------------------nameClass-------------------------- */
+
+
+
+/* -----------------------GenderClass---------------------- */
+
+.commonGenderClass{
+    margin-top:5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
+/* -----------------------GenderClass---------------------- */
+
+
+
+
+
+
+/* -------------------------Branch------------------- */
 
 #selectElem{
     margin-top: 5px;
@@ -176,6 +234,13 @@ input::placeholder{
     outline:none;
 }
 
+/* -------------------------Branch------------------- */
+
+
+
+
+/* ----------------------------About----------------------- */
+
 #textArea{
     margin-top: 5px;
     background: rgba(255, 217, 217, 0.2);
@@ -183,95 +248,35 @@ input::placeholder{
     box-shadow: 10px 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(8px);
     border: 1px solid rgba(236, 49, 158, 0.3);
-    width:80%;
+    width:100%;
     height:75px;
 }
 
+#textArea:focus{
+    margin-top: 5px;
+    background: rgba(202, 78, 78, 0.2);
+    border-radius: 16px;
+    box-shadow: 10px 14px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    border: 1px solid rgba(236, 49, 158, 0.3);
+    outline:none;
+}
 
-.nameClass input:focus {
-    border:0px solid #000000;
-    border-bottom-width: 1px;
-    background-color: transparent;
-    outline: none;
-  }
+/* ----------------------------About----------------------- */
 
-  .error-message {
+
+
+/* ----------------------error message------------------- */
+.error-message {
     color: red;
     font-size: 14px;
     margin-top: 5px;
 }
-
-
-  @media screen and (max-width:1113px){
-    .commonDiv{
-        margin:15px auto ;
-    }
-    .nameClass{
-        margin:15px auto;
-        /* padding-left: 18%; */
-    }
-}
+/* ----------------------error message------------------- */
 
 
 
-  @media screen and (max-width:1012px){
-    .uploadPhotoDocs{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .uploadPhotoDocs button{
-        margin-top: 20px;
-        margin-right: 27px;
-    }
-
-    .paddingDiv{
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-
-    .mainForm{
-        width:80%;
-    }
-}
-
-@media screen and (max-width:674px){
-    .uploadPhotoDocs{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: 15px;
-    }
-
-    .uploadPhotoDocs button{
-        margin-top: 10px;
-        margin-right: 27px;
-    }
-
-    .nameClass{
-        padding-left:5%;
-    }
-}
-
-
-@media screen and (max-width: 642px) {
-    .mainTitle{
-        font-size: 13px;
-    }
-  }
-
-  @media screen and (max-width: 514px) {
-    .mainTitle{
-        font-size: 11px;
-    }
-  }
-
-  @media screen and (max-width: 514px) {
-    .mainTitle{
-        font-size: 9px;
-    }
-  }
+/* ----------------------button----------------------- */
 
 .btn{
     width: 100px;
@@ -288,5 +293,72 @@ input::placeholder{
     background-color: rgb(133, 110, 110);
     color: white;
 }
+
+/* ----------------------button----------------------- */
+
+/* ----------------------padding------------------ */
+
+
+
+/* --------------------------table---------------------- */
+.tableContainer{
+    padding: 20px;
+
+    background: rgba(255, 217, 217, 0.2);
+    border-radius: 16px;
+    box-shadow: 25px 14px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.tableContainer h2{
+    color:rgb(133, 110, 110);
+    margin: 2% 41%;
+}
+
+table{
+    width:100%;
+    border-collapse:collapse;
+}
+
+table th, table td{
+    border:1px solid rgba(238, 17, 91, 0.644);
+    padding:8px;
+    text-align: left;
+}
+
+
+/* ------------------Delete and Edit Button----------------- */
+
+.button{
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    color:white;
+    background-color: rgb(233, 140, 228);
+    cursor:pointer;
+}
+
+.button.delete{
+    background-color: rgb(139, 4, 60);
+    margin-left: 10px;
+}
+
+/* ------------------Delete and Edit Button----------------- */
+
+
+
+/* ----------------------------table--------------------------- */
+
+
+
+
+
+/* ---------------------container------------------ */
+/* ------------Body------------------- */
+
+
+
+
 
   
