--- a/index.css
+++ b/index.css
@@ -137,7 +137,8 @@ body{
 }
 
 .uploadPhoto img{
-    width:120px;
+    width:90px;
+    height:110px;
     border-radius: 50%;
     margin-right: 20px;
 }
