--- a/index.css
+++ b/index.css
@@ -14,6 +14,70 @@ body{
     overflow-y: scroll;
 }
 
+/* --------------Modal------------ */
+
+.modal{
+    background: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+}
+
+.modal-wrapper {
+    width: 300px;
+    height: 110px;
+    background: ghostwhite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.hide {
+    display: none;
+}
+
+.modalHeading h4{
+    margin-left: 15px;
+}
+
+.modalButtons{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+}
+
+.yesButton{
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    color:white;
+    background-color: rgb(250, 9, 9);
+    cursor:pointer;
+}
+
+.noButton{
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    color:white;
+    background-color: rgb(5, 83, 3);
+    cursor:pointer;
+}
+
+
+
+
+
+/* --------------Modal------------ */
+
+
+
 
 /* ---------------Navbar---------------- */
 .Navyy{
@@ -88,6 +152,30 @@ body{
 /* --------------------heading--------------- */
 
 
+/* -------------------Toast-------------------- */
+
+#snackbar {
+    /* visibility: hidden; */
+    width: 250px; 
+    margin-left: -125px;
+    background-color: #333; 
+    color: #fff; 
+    text-align: center; 
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed; 
+    z-index: 4; 
+    right:0;
+  }
+
+  .visible{
+    /* visibility: visible; */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+
+  /* -------------------Toast-------------------- */
+
 
 
 /* ---------------------container------------------ */
@@ -110,9 +198,8 @@ body{
     margin:auto;
     background: rgba(255, 217, 217, 0.2);
     border-radius: 16px;
-    box-shadow: 25px 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(8px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 2px solid rgba(218, 13, 183, 0.3);
 }
 
 /* ---------------------commonDiv----------------- */
@@ -330,9 +417,8 @@ input::placeholder{
 
     background: rgba(255, 217, 217, 0.2);
     border-radius: 16px;
-    box-shadow: 25px 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(8px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 2px solid rgba(218, 13, 183, 0.3);
 }
 
 .tableContainer h2{
